2009-03-02  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.10 ===

2009-03-02  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.9 ===

2009-03-02  Matthias Clasen  <mclasen@redhat.com>

	* gioenums.h: Add a Since: tag

2009-03-01  Matthias Clasen  <mclasen@redhat.com>

	Bug 573658 – Deadlock in giomodule.c

	* giomodule.c: Use a separate lock for extension point registration
	to avoid deadlock. Discovered by Torsten Schoenfeld

2009-03-01  Matthias Clasen  <mclasen@redhat.com>

	* gdatainputstream.c: Fix docs

2009-02-27  Matthias Clasen  <mclasen@redhat.com>

	Bug 573421 – Clarify message format in GMountOperation

	* gmountoperation.c: Document that the first line of a
	multi-line message should be interpreted as a heading.

2009-02-27  David Zeuthen  <davidz@redhat.com>

	Bug 573462 – GEmblemedIcon leak

	* gemblemedicon.c (g_emblemed_icon_finalize):
	Avoid leaking a GList.

2009-02-27  Alexander Larsson  <alexl@redhat.com>

        * giomodule-priv.h:
        * giomodule.c:
	Split out the extension point registration code to its
	own function.

        * glocalvfs.c:
	Ensure extension points are registered before extending it.
	It might not have happened yet if g_vfs_get_local() is called.

2009-02-26  Alexander Larsson  <alexl@redhat.com>

	Bug 540461 – g_memory_output_stream_get_data_size() doesn't behave as document
        * gmemoryoutputstream.c:
	Track actual valid size, even if we later seek back.

        * tests/memory-output-stream.c:
	Add testcase

2009-02-26  Alexander Larsson  <alexl@redhat.com>

	Bug 543183 – Clarify docs for g_file_has_prefix

	* gfile.c: (g_file_has_prefix):
	Clarify how the prefix matching works.

2009-02-26  Alexander Larsson  <alexl@redhat.com>

	* gdesktopappinfo.c:
	Support desktop file key X-GIO-NoFuse which disables
	use of fuse pathnames for %u and %U arguments.

2009-02-25  Alexander Larsson  <alexl@redhat.com>

	Bug 570073 – Add support for reading filesystems on Interix
